<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">Task.me</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="see_students">Alunos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Cadastre-se</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_empty_email">O campo ""email"" não pode estar vazio</string>
    <string name="error_invalid_password">Mínimo de 6 caractéres</string>
    <string name="error_empty_password">Digite sua senha</string>
    <string name="select_user_type">Selecione o tipo de usuário</string>
    <string name="error_confirm_password">Confirme sua senha</string>
    <string name="error_passwords_not_match">Senhas não conferem</string>
    <string name="error_invalid_name">Não pode conter numeros ou caracteres especiais</string>
    <string name="error_incorrect_password">Senha incorreta!</string>
    <string name="error_name_required">Digite seu nome</string>
    <string name="error_last_name_required">Digite seu sobrenome</string>
    <string name="error_nickname_required">Crie um apelido</string>
    <string name="error_required_password">Crie uma senha</string>
    <string name="permission_rationale">"Necessria a permissão aos seus contatos."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="item_menu1">Agenda</string>
    <string name="item_menu2">Anotações</string>
    <string name="item_menu3">Sobre</string>
    <string name="item_menu4">Sair</string>
    <string-array name="event_type">
        <item>(Selecione o tipo do evento)</item>
        <item>Prova</item>
        <item>Projeto</item>
        <item>Trabalho</item>
        <item>Outros</item>
    </string-array>
    <string-array name="colleges">
        <item>Selecione sua faculdade</item>
        <item>Ceunsp Itu</item>
        <item>Ceunsp Salto</item>
    </string-array>
    <string-array name="courses">
        <item>Selecione seu curso</item>
        <item>Analise de Sistemas</item>
        <item>Design Grafico</item>
        <item>Ciencias da Computação</item>
    </string-array>
    <string-array name="user_type">
        <item>(Selecione o tipo de usuário)</item>
        <item>Aluno</item>
        <item>Professor</item>
    </string-array>
    <string name="name">"Nome"</string>
    <string name="last_name">"Sobrenome"</string>
    <string name="nickname">"Apelido"</string>
    <string name="date_of_birth">"Dt. nasc."</string>
    <string name="college">"Faculdade"</string>
    <string name="course">"Curso"</string>
    <string name="email">"Email"</string>
    <string name="password">"Crie uma senha"</string>
    <string name="password_confirm">"Digite novamente"</string>
    <string name="title_event">" "Insira um título</string>
    <string name="date_event">Data</string>
    <string name="save_button">Salvar</string>
    <string name="title_activity_main_tab2">Novo evento</string>
    <string name="title_activity_schedule_add_event">Teste</string>
    <string name="not_have_Account">Ainda não é cadastrado!?</string>
    <string name="add_proof">Adicionar prova</string>
    <string name="add_event">Adicionar evento</string>
    <string name="add_job">Adicionar trabalho</string>
    <string name="add_note">Adicionar anotação</string>
    <string name="title_activity_class_register">ClassRegisterActivity</string>
    <string name="no_class_selected">Escolha uma turma do seu curso para começar ou crie uma nova.</string>
    <string name="annotation">Observações</string>
    <string name="subject">Disciplina</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="title_activity_join_class">JoinClassActivity</string>
    <string name="title_activity_teacher_classes">TeacherClassesActivity</string>
    <string name="text_question_activity">Vamos concluir seu cadastro!</string>
    <string name="text_question_activity2">Selecione abaixo a sua instituição de ensino e curso</string>
    <string name="proceed">Pronto!</string>
    <string name="class_name">Insira um nome</string>
    <string name="wait">Aguarde…</string>
    <string name="title1">"Sair da turma"</string>
    <string name="message1">"Ao sair você não terá mais acesso aos eventos dessa turma. Deseja continuar?"</string>
    <string name="yes">"Sim"</string>
    <string name="no">Não</string>
    <string name="delete_buttom">Excluir</string>
    <string name="title2">"Excluir evento?"</string>
    <string name="message2">"Você está prestes a excluir o evento da agenda da turma. Deseja continuar?"</string>
    <string name="title3">"Atualizar evento?"</string>
    <string name="message3">"Deseja aplicar as alteraçãoes realizadas ao evento?"</string>
    <string name="title4">"Atualizar cadastro"</string>
    <string name="message4">"Deseja aplicar as alteraçãoes?"</string>
    <string name="students">Alunos</string>
    <string name="teachers">Professores</string>
    <string name="empty_class">"No momento você não está em nenhuma turma. Clique no botão abaixo para encontrar novas turmas."</string>
    <string name="empty_annotation">Nenhuma anotação por enquanto...</string>
    <string name="inser_title">Insira um título</string>
    <string name="create_className">Dê um nome á sala</string>
    <string name="create">Criar</string>
    <string name="today">"Hoje,"</string>
    <string name="empty_event">Nada programado para hoje!</string>
    <string name="user_type">Tipo de usuário</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Conta</string>
    <string name="change_password">Mudar senha</string>
    <string name="reset_password">Esqueci minha senha</string>
    <string name="create_account">Crie sua conta!</string>
    <string name="search">Pesquisar</string>
    <string name="not_found_classes">Nenhuma classe encontrada.</string>
    <string name="message">Nenhuma turma disponível, crie uma nova clicando no botão</string>
    <string name="available_classes">Turmas disponíveis para seu curso:</string>
    <string name="insert_your_email">Digite seu email</string>
    <string name="forgot_password">Esqueci minha senha.</string>
    <string name="about_authors">Este aplicativo é resultante de um Projeto Interdisciplinar
        desenvolvido através da instituição de ensino Centro Universitário Nossa Senhora do
        patrocínio apresentado como requisito obrigatório para Conclusão do Curso de Análise e
        desenvolvimento de sistemas.</string>
    <string name="about_title">Sobre o aplicativo</string>
    <string name="author1">Tiago Machado de Lima</string>
    <string name="author2">Samuel Henrique da Silva</string>
    <string name="about_title2">Autores/Desenvolvedores:</string>
    <string name="license_floatcationmenu">- Floating Action Menu Copyright 2015 Dmytro Tarianyk Licensed under the Apache License, Version 2.0 (the \'\'License\'\'); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \'\'AS I\'\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="about_title3">Licenças de software:</string>
    <string name="compactcalendar_license">- Compact Calendar View The MIT License (MIT) Copyright (c) [2018] [Sundeepk] Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the\'\'Softwar\'\'), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED \'\'AS IS\'\', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="menu_today">Hoje</string>
    <string name="event_Type">Tipo do evento</string>

</resources>
