<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_event_24dp"
            android:title="@string/item_menu1" />
        <item
            android:id="@+id/nav_annotation"
            android:icon="@drawable/ic_annotation_24dp"
            android:title="@string/item_menu2" />

        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/ic_account_settings_24dp"
            android:title="@string/account_settings"/>
    </group>

    <group android:checkableBehavior="single"
        android:menuCategory="alternative">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_24dp"
            android:title="@string/item_menu4"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/logout"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/item_menu3"/>
    </group>



</menu>
